optimising logic, having maximum search selection rate

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.krishdev.searchassist">
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+<!--    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />-->
 <!--    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PROJECTION" />-->
 
     <application
@@ -42,8 +42,8 @@
         </service>
         <service
             android:name=".GestureDetectionService"
-            android:foregroundServiceType="shortService"
-            />
+            >
+        </service>
             <!-- Optional: If the broadcast is public, declare receiver permission -->
     </application>
 
