--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,19 +4,17 @@
     package="com.krishdev.searchassist">
 
     <queries>
+
         <!-- Specific app by package name -->
         <package android:name="ninja.sesame.app.edge" />
 
         <!-- Allow queries for apps with launcher activity -->
         <intent>
             <action android:name="android.intent.action.MAIN" />
+
             <category android:name="android.intent.category.LAUNCHER" />
         </intent>
     </queries>
-
-<!--    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />-->
-<!--    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />-->
-<!--    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PROJECTION" />-->
 
     <application
         android:allowBackup="true"
@@ -28,6 +26,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SearchAssist"
         tools:targetApi="31">
+        <activity
+            android:name=".IntroductoryActivity"
+            android:exported="false"
+            android:launchMode="singleTask"
+            android:theme="@style/Theme.SearchAssist">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -51,21 +59,16 @@
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_service_config" />
         </service>
-        <!-- <service
-            android:name=".GestureDetectionService"
-            android:enabled="true"
+        <service
+            android:name=".QuickSettingsService"
             android:exported="true"
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
-            >
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
-                <action android:name="android.accessibilityservice.AccessibilityService" />
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
-
-            <meta-data
-                android:name="android.accessibilityservice"
-                android:resource="@xml/accessibility_service_config" />
-        </service> -->
-            <!-- Optional: If the broadcast is public, declare receiver permission -->
+        </service>
     </application>
 
 </manifest>
