--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 # to allow builg config
 android.defaults.buildfeatures.buildconfig=true
+android.buildTypes.release.ndk.debugSymbolLevel=FULL
