Refactor: Update dependencies, themes, and add BootReceiver
This commit includes several updates and additions:

- **Dependency Updates:**
    - Upgraded Gradle version to 8.13.
    - Updated various AndroidX and Material Design libraries to their latest versions.
    - Added new dependencies for CardView and Fragment KTX.
    - Enabled Compose compiler plugin.
- **Theme Updates:**
    - Changed base application theme to `Theme.Material3.DayNight.NoActionBar`.
    - Updated splash screen theme to use `Theme.SearchAssist`.
    - Removed old `ic_launcher.xml` and `ic_launcher_round.xml` files.
- **BootReceiver:**
    - Added a `BootReceiver` to initialize services and restore overlay settings on device boot or app update if accessibility service is enabled.
- **Build Configuration:**
    - Updated `compileSdk` to 36.
    - Enabled Android App Bundle splits for language, density, and ABI.
    - Updated Proguard rules for optimization and to keep necessary classes.
    - Set Kotlin compiler extension version to `1.5.8`.
- **Code Refinements:**
    - Removed unused string resources.
    - Changed SharedPreferences name in `IntroductoryActivity` and `MainActivity` to `GestureLoggerPrefs`.
- **IDE Configuration:**
    - Updated Gradle settings in `.idea/gradle.xml`.
    - Added `.idea/runConfigurations.xml`.
    - Updated project JDK to version 21.
    - Updated inspection profiles.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
     </queries>
 
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -73,6 +74,17 @@
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
         </service>
+        
+        <receiver
+            android:name=".BootReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter android:priority="500">
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
