Disable Jetpack Compose and remove related configurations
The Compose compiler plugin and related settings have been commented out in `app/build.gradle.kts` and `build.gradle.kts`. The `compose` build feature is now set to `false`.

The `compose-compiler` plugin alias has also been commented out in `gradle/libs.versions.toml`.

Additionally, a new `.idea/AndroidProjectSystem.xml` file has been added to specify Gradle as the project system.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,6 +34,6 @@ androidx-runner = { group = "androidx.test", name = "runner", version.ref = "run
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+#compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
 
